--- a/services/mongo/.gitignore
+++ b/services/mongo/.gitignore
@@ -1,3 +1,10 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
 data/
 # Byte-compiled / optimized / DLL files
 __pycache__/
