--- a/services/neo4j/protein-neo4j/Dockerfile
+++ b/services/neo4j/protein-neo4j/Dockerfile
@@ -1,6 +1,8 @@
 FROM eclipse-temurin:17-jdk-alpine AS build
 WORKDIR /app
 COPY . .
+
+RUN chmod +x mvnw   # Make Maven executable
 RUN ./mvnw clean package -DskipTests
 
 FROM eclipse-temurin:17-jre-alpine
